Add more progress

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <header>
       <h1>Voter Alienator</h1>
-      <h2 id="score-container">ScoreValue</h2>
+      <h2 id="reducer-container"><p>Placeholder</p></h2>
+      <h2 id="multiplier-container"><p>Placeholder</p></h2>
     </header>
     <section id="subheading">
       <p>Click to add time before the counter runs out!!</p>
@@ -23,7 +24,7 @@
       <div id="clickable-image"></div>
     </section>
     <section id="bottom">
-      <h3>Upgrades</h3>
+      <h3>Multipliers</h3>
       <p>Hit the score to recieve an upgrade.</p>
       <div id="upgrades-container"></div>
     </section>
