--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   </head>
   <body>
     <header>
-      <h1>Voter Alienator</h1>
-      <h2 id="reducer-container"><p>Placeholder</p></h2>
-      <h2 id="multiplier-container"><p>Placeholder</p></h2>
+      <h1>FaceyVote</h1>
+      <h2 id="multiplier-container"><p>Multiplier: 1</p></h2>
+      <h2 id="score-container"><p>Score: 0</p></h2>
     </header>
     <section id="subheading">
       <p>Click to add time before the counter runs out!!</p>
       <div id="countdown-bar">
-        <div id="inner-bar"><p>Ready?</p></div>
+        <div id="inner-bar"></div>
+        <p id="game-time">Ready?</p>
       </div>
     </section>
     <section id="middle">
@@ -25,7 +26,7 @@
     </section>
     <section id="bottom">
       <h3>Multipliers</h3>
-      <p>Hit the score to recieve an upgrade.</p>
+      <p>Hit the score to receive an upgrade (for a cost).</p>
       <div id="upgrades-container"></div>
     </section>
   </body>
