Add sounds but broken, going for lunch

--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clicker Game</title>
+    <title>Cameron Clicker</title>
     <link rel="stylesheet" href="style.css" />
     <script src="app.js" defer></script>
   </head>
   <body>
     <header>
-      <h1>FaceyVote</h1>
+      <audio src="./audio/hit_sound_1.mp3" id="hit-sound-1"></audio>
+      <audio src="./audio/hit_sound_2.mp3" id="hit-sound-2"></audio>
+      <audio src="./audio/hit_sound_3.mp3" id="hit-sound-3"></audio>
+      <audio src="./audio/hit_sound_4.mp3" id="hit-sound-4"></audio>
+      <audio src="./audio/hit_sound_5.mp3" id="hit-sound-5"></audio>
+      <audio src="./audio/hit_sound_6.mp3" id="hit-sound-6"></audio>
+      <audio src="./audio/hit_sound_7.mp3" id="hit-sound-7"></audio>
+      <audio src="./audio/hit_sound_8.mp3" id="hit-sound-8"></audio>
+      <audio src="./audio/rabble.mp3" id="rabble-sound"></audio>
+      <h1>CameronClicker</h1>
       <h2 id="multiplier-container"><p>Multiplier: 1</p></h2>
       <h2 id="score-container"><p>Score: 0</p></h2>
     </header>
