--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <script src="app.js" defer></script>
   </head>
   <body>
-    <audio src="./audio/hit_sound_1.mp3" id="hit-sound-1"></audio>
-    <audio src="./audio/hit_sound_2.mp3" id="hit-sound-2"></audio>
-    <audio src="./audio/hit_sound_3.mp3" id="hit-sound-3"></audio>
-    <audio src="./audio/hit_sound_4.mp3" id="hit-sound-4"></audio>
-    <audio src="./audio/hit_sound_5.mp3" id="hit-sound-5"></audio>
-    <audio src="./audio/hit_sound_6.mp3" id="hit-sound-6"></audio>
-    <audio src="./audio/hit_sound_7.mp3" id="hit-sound-7"></audio>
-    <audio src="./audio/hit_sound_8.mp3" id="hit-sound-8"></audio>
-    <audio src="./audio/rabble.mp3" id="rabble"></audio>
+    <div class="sounds">
+      <audio src="./audio/hit_sound_1.mp3" id="hit-sound-1"></audio>
+      <audio src="./audio/hit_sound_2.mp3" id="hit-sound-2"></audio>
+      <audio src="./audio/hit_sound_3.mp3" id="hit-sound-3"></audio>
+      <audio src="./audio/hit_sound_4.mp3" id="hit-sound-4"></audio>
+      <audio src="./audio/hit_sound_5.mp3" id="hit-sound-5"></audio>
+      <audio src="./audio/hit_sound_6.mp3" id="hit-sound-6"></audio>
+      <audio src="./audio/hit_sound_7.mp3" id="hit-sound-7"></audio>
+      <audio src="./audio/hit_sound_8.mp3" id="hit-sound-8"></audio>
+      <audio src="./audio/rabble.mp3" id="rabble"></audio>
+    </div>
     <section id="game-over">
       <div id="eog-title-container">
         <div id="eog-faces"></div>
@@ -34,13 +36,10 @@
     <header>
       <div id="mute-container" class="unmuted"></div>
       <h1>FaceyVote!</h1>
-      <h2 id="score-container"><p>Score: 0</p></h2>
+      <h2 id="score-container">Score: 0</p></h2>
     </header>
     <section id="subheading">
-      <p>
-        Click the annoying politician face to increase your votes before the
-        time runs out and you can't spend all their money!!
-      </p>
+      <p>Click the face to get votes!</p>
       <div id="countdown-bar">
         <div id="inner-bar"></div>
         <p id="game-time">Ready?</p>
@@ -48,7 +47,7 @@
     </section>
     <section id="middle">
       <section id="high-scores"></section>
-      <div id="clickable-image"></div>
+      <div id="clickable-image"</div>
     </section>
     <section id="bottom">
       <h2 id="multiplier-container">Public Apathy: 1</h2>
@@ -61,7 +60,7 @@
             id="david-cameron"
             class="obscured"
           />
-          <p>x0</p>
+          <p id="multiplier-number">x0</p>
         </div>
         <div class="upgrade-item">
           <p>100</p>
@@ -70,7 +69,7 @@
             id="keir-starmer"
             class="obscured"
           />
-          <p>x1</p>
+          <p id="multiplier-number">x1</p>
         </div>
         <div class="upgrade-item">
           <p>200</p>
@@ -79,7 +78,7 @@
             id="rishi-sunak"
             class="obscured"
           />
-          <p>x2</p>
+          <p id="multiplier-number">x2</p>
         </div>
         <div class="upgrade-item">
           <p>300</p>
@@ -88,25 +87,25 @@
             id="michael-gove"
             class="obscured"
           />
-          <p>x3</p>
+          <p id="multiplier-number">x3</p>
         </div>
         <div class="upgrade-item">
-          <p>400</p>
+          <p>500</p>
           <img
             src="./images/nigel-farage.png"
             id="nigel-farage"
             class="obscured"
           />
-          <p>x4</p>
+          <p id="multiplier-number">x4</p>
         </div>
         <div class="upgrade-item">
-          <p>500</p>
+          <p>1000</p>
           <img
             src="./images/theresa-may.png"
             id="theresa-may"
             class="obscured"
           />
-          <p>x5</p>
+          <p id="multiplier-number">x5</p>
         </div>
       </div>
     </section>
